Release v1.2.2, Wed 31 Oct 2018
=======================================================

  * Updated database, added T3GQ eff maps and a few ATLAS 13 TeV results
  * Database "official" now refers to a database without fastlim results, "official_fastlim", to the official database *with* fastlim
  * List displaced signatures in missing topologies
  * Small improvements in documentation

Release v1.2.1, Tue 9 Oct 2018
=======================================================

  * Fix in particleNames for non-MSSM models
  * Fixed the "marginalize" recipe
  * Fixed the T2bbWWoff 44 signal regions plots in manual

Release v1.2.0, Wed 15 Aug 2018
=======================================================

  * Decomposition and experimental results properly handle non-MET BSM final states (e.g. HSCP)
  * Added lifetime reweighting at decomposition for meta-stable particles
  * Added finalState property for Elements (backwards compatible)
  * Introduced inclusive branches and particles (for description of HSCP results)
  * Inclusion of HSCP and R-hadron results in the database

Release v1.1.3, Wed 08 Aug 2018
=======================================================

  * support for covariance matrices and combination of signal regions
  * new plotting tool added to smodelsTools.py (interactive-plots)
  * path to particles.py can now be specified in parameters.ini file
  * wildcards allowed when selecting analyses, datasets, txnames
  * Added option to show individual contributions from
    topologies to total theory prediction
  * Database path allows URLs
  * Python default changed from python2 to python3
  * Fixed lastUpdate bug, now giving correct date 
  * Changes in pickling (e.g. subpickling, removing redundant zeroes)
  * smodelsTools.py now has fixpermissions, for system-wide installs
  * fixed small issue with pair production of even particles
  * Moved the code documentation to the manual
  * Added option for installing within the source folder
 