@@ -5,6 +5,7 @@ Release v1.2.2, Wed 31 Oct 2018
   * Database "official" now refers to a database without fastlim results, "official_fastlim", to the official database *with* fastlim
   * List displaced signatures in missing topologies
   * Small improvements in documentation
+  * Fix in clustering for asymmetric masses
 
 Release v1.2.1, Tue 9 Oct 2018
 =======================================================
